<resources>
    <string name="app_name">TwoDicePigCIS436</string>
    <string name="hold_dice">HOLD DICE</string>
    <string name="second_dice">Second Dice</string>
    <string name="first_dice">First Dice</string>
    <string name="roll_dice">ROLL DICE</string>
    <string name="player_2_total_0">Player 2 Total: 0</string>
    <string name="player_1_total_0">Player 1 Total: 0</string>
    <string name="turn_total_0">Turn Total: 0</string>
    <string name="current_player_p1">Current Player: P1</string>
    <string name="reset">RESET</string>
</resources>